# duckling

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
agent_runner/: __init__.py  engine.py  runner.py
agent_runner/copilot/: __init__.py  copilot_engine.py
agent_runner/goose/: __init__.py  goose_config.py  goose_engine.py
agent_runner/opencode/: opencode_engine.py
agent_runner/tools/: __init__.py
ast_grep_rules/: js-console-log.yml  js-eval-usage.yml  js-no-var.yml  python-assert-in-prod.yml  python-eval-usage.yml  python-hardcoded-secret.yml  python-sql-injection.yml  ts-any-type.yml
container-config/: AGENTS.md
dashboard/: .gitignore  next.config.ts  package-lock.json  package.json
dashboard/static/: dashboard.html.bak
demo_repo/: README.md  pyproject.toml
demo_repo/app/: __init__.py  main.py  rate_limiter.py
demo_repo/tests/: __init__.py  test_auth.py
docs/: ARCHITECTURE.md
git_integration/: __init__.py  git_manager.py
git_integration/providers/: __init__.py  base.py  bitbucket_provider.py  github_provider.py
gui/: index.html  package.json  tsconfig.json  vite.config.ts
gui/src/: App.tsx  index.css  index.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
mcp_toolshed/: __init__.py  server.py  toolshed.py
mcp_toolshed/tools/: __init__.py
orchestrator/: __init__.py  app.py
scripts/: duckling-cli.py
slack_bot/: __init__.py  bot.py
tests/: __init__.py  conftest.py  test_engine.py  test_git.py  test_intent.py  test_models.py  test_opencode_engine.py  test_pipeline.py  test_routes.py  test_vm_lifecycle.py
tui/: package.json
tui/src/: api.ts  util.ts  (+2 more)
warm_pool/: __init__.py  pool_manager.py
(+111 files in other folders)
